# onnx4mlir

./: CMakeLists.txt
include/onnx2mlir/common/: onnx.hpp
include/onnx2mlir/conversion/: onnx_passes.hpp
include/onnx2mlir/dialect/onnx/: CMakeLists.txt  Onnx.hpp  Onnx.td  OnnxAttrs.hpp  OnnxAttrs.td  OnnxDialect.hpp  OnnxDialect.td  OnnxInterface.hpp  OnnxInterface.td  OnnxInterfaces.hpp  OnnxOps.hpp  OnnxOps.td  OnnxOps.td.inc  OnnxPrinters.hpp  OnnxTypes.hpp  OnnxTypes.td  OnnxTypes.td.inc  gen_onnx_dia.py
include/onnx2mlir/frontend/: frontend.hpp  onnx.hpp
python/: CMakeLists.txt
python/onnx2mlir/pipeline/: __init__.py  builder.py  runner.py
python/onnx2mlir/support/: __init__.py  numpy_to_mlir.py
python/src/conversion/passes/: onnx_pass_bindings.cpp  onnx_passes_bindings.cpp
python/src/dialect/: onnx_dialect_bindings.cpp
src/: CMakeLists.txt  main.cpp
src/conversion/: CMakeLists.txt
src/conversion/passes/: CMakeLists.txt  conversion.cpp  onnx_to_linalg.cpp  onnx_to_linalg.hpp
src/conversion/passes/onnx_to_linalg/: arith_binary.cpp  arith_unary.cpp  cast.cpp  compare_binary.cpp  gemm.cpp  maxpool.cpp  where.cpp
src/dialect/onnx/: CMakeLists.txt  Onnx.td  OnnxAttrs.td  OnnxDialect.td  OnnxInterfaces.td  OnnxOps.td  OnnxOps.td.inc  OnnxTypes.td
src/dialect/onnx/ir/: CMakeLists.txt  onnx_attrs.cpp  onnx_dialect.cpp  onnx_interface.cpp  onnx_interfaces.cpp  onnx_ops.cpp  onnx_printers.cpp  onnx_types.cpp
src/frontend/: CMakeLists.txt
src/frontend/converters/: onnx.cpp
src/frontend/importers/: onnx.cpp
src/frontend/python/: onnx_importer_bindings.cpp
tests/: CMakeLists.txt
tests/lint/: git-check-lint-format.sh  git-clang-format.sh
tests/python/conversion/: test_onnx_to_linalg_ops.py
tests/python/dialect/: test_onnx_dialect_ir.py
tools/: gen_onnx_dia.py
