cmake_minimum_required(VERSION 3.15)
project(onnx2mlir LANGUAGES C CXX)

option(BUILD_TESTING "Build with tests" ON)
option(BUILD_PYTHON_BINDINGS "Build with python bindings" ON)
option(BUILD_SHARED_LIBS "Build shared libraries instead of static libraries" ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build" FORCE)
endif()
message(STATUS "CMake build type is: ${CMAKE_BUILD_TYPE}")

if(BUILD_SHARED_LIBS)
  message(STATUS "Building SHARED libraries")
else()
  message(STATUS "Building STATIC libraries")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-comment -Wno-unused-parameter -Wno-unused-but-set-variable -Wno-unused-function")

find_program(PYTHON3_EXECUTABLE NAMES python3 REQUIRED)

if(BUILD_PYTHON_BINDINGS)
  set(PYBIND11_FINDPYTHON ON)
  find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
  find_package(pybind11 REQUIRED)
endif()

find_package(ONNX REQUIRED 1.17)
if(ONNX_FOUND)
  message(STATUS "Found ONNX version: ${ONNX_VERSION}")
  math(EXPR ONNX2MLIR_ONNX_VERSION "${ONNX_VERSION_MAJOR}*100 + ${ONNX_VERSION_MINOR}")
  message(STATUS "Set ONNX2MLIR_ONNX_VERSION=${ONNX2MLIR_ONNX_VERSION}")
  if (${ONNX2MLIR_ONNX_VERSION} LESS 119)
    message(FATAL_ERROR "ONNX version 1.19 or greater is required.")
  endif()
  add_definitions(-DONNX2MLIR_ONNX_VERSION=${ONNX2MLIR_ONNX_VERSION})
endif()
# onnx variant
find_path(ONNX_PROTOBUF_INCLUDE_DIR NAMES onnx/onnx.pb.h)
find_path(ONNX_PROTOBUF_ML_INCLUDE_DIR NAMES onnx/onnx-ml.pb.h)
if(ONNX_PROTOBUF_INCLUDE_DIR)
  message(STATUS "Standard ONNX_ML=0 protobuf headers found.")
  set(ONNX_USE_ML 0)
elseif(ONNX_PROTOBUF_ML_INCLUDE_DIR)
  message(STATUS "Extended ONNX_ML=1 protobuf headers found.")
  set(ONNX_USE_ML 1)
else()
  message(FATAL_ERROR "ONNX protobuf header not found.")
endif()

# use llvm config
if (DEFINED LLVM_CONFIG)
  message(STATUS "Using ${LLVM_CONFIG}")
  separate_arguments(LLVM_CONFIG)
  execute_process(COMMAND ${LLVM_CONFIG} --libdir
    RESULT_VARIABLE __llvm_exit_code
    OUTPUT_VARIABLE __llvm_cmakedir_space
    OUTPUT_STRIP_TRAILING_WHITESPACE)
  if(NOT "${__llvm_exit_code}" STREQUAL "0")
    message(FATAL_ERROR "Fatal error executing: ${LLVM_CONFIG} --cmakedir")
  else()
    list(APPEND CMAKE_PREFIX_PATH "${__llvm_cmakedir_space}/cmake")
  endif()
else()
  message(FATAL_ERROR "Please use -DLLVM_CONFIG=<path-to-llvm-config> for a valid llvm setup.")
endif()

find_package(MLIR REQUIRED CONFIG)
if(MLIR_FOUND)
  message(STATUS "Found LLVM/MLIR version: ${LLVM_VERSION}")
  set(ONNX2MLIR_MLIR_VERSION ${LLVM_VERSION_MAJOR}${LLVM_VERSION_MINOR})
  message(STATUS "Set ONNX2MLIR_MLIR_VERSION=${ONNX2MLIR_MLIR_VERSION}")
  if (${ONNX2MLIR_MLIR_VERSION} LESS 210)
    message(FATAL_ERROR "LLVM/MLIR version 21.0 or greater is required.")
  endif()
  add_definitions(-DONNX2MLIR_MLIR_VERSION=${ONNX2MLIR_MLIR_VERSION})
  set(MLIR_BINARY_DIR ${CMAKE_BINARY_DIR})
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(TableGen)
include(AddLLVM)
include(AddMLIR)

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${PROJECT_BINARY_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_definitions(${LLVM_DEFINITIONS})

add_subdirectory(src)

# python bindings
if(BUILD_PYTHON_BINDINGS)
  include(AddMLIRPython)
  add_subdirectory(python)
endif()

# docs
add_custom_target(docs
  DEPENDS
    OnnxAttrsDocGen
    OnnxAttrsInterfacesDocGen
    OnnxDialectDocGen
    OnnxOpsDocGen
    OnnxOpsInterfacesDocGen
    OnnxTypesDocGen
    OnnxTypesInterfacesDocGen
    ConversionPassesDocGen
  COMMENT "Build docs"
)

# lint
add_custom_target(lint
  COMMAND env sh tests/lint/git-clang-format.sh
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  COMMENT "Running code format check..."
)

if(BUILD_TESTING)
  find_program(PYTEST_EXECUTABLE pytest REQUIRED)
  add_subdirectory(tests)
endif()
