cmake_minimum_required(VERSION 3.15)
project(onnx2mlir VERSION 0.1 LANGUAGES C CXX)

option(BUILD_TESTING "Build with tests" ON)
option(BUILD_PYTHON_BINDINGS "Build with python bindings" ON)
option(BUILD_SHARED_LIBS "Build shared libraries instead of static libraries" ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build" FORCE)
endif()
message(STATUS "CMake build type is: ${CMAKE_BUILD_TYPE}")

if(BUILD_SHARED_LIBS)
  message(STATUS "Building SHARED libraries")
else()
  message(STATUS "Building STATIC libraries")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-comment -Wno-unused-parameter -Wno-unused-but-set-variable -Wno-unused-function")

find_program(PYTHON3_EXECUTABLE NAMES python3 REQUIRED)

if(BUILD_PYTHON_BINDINGS)
  find_package(Python COMPONENTS Interpreter Development REQUIRED)
  execute_process(
    COMMAND "${Python_EXECUTABLE}" -m nanobind --cmake_dir
    OUTPUT_VARIABLE NANOBIND_CMAKE_DIR
    OUTPUT_STRIP_TRAILING_WHITESPACE
  )
  find_package(nanobind CONFIG REQUIRED PATHS "${NANOBIND_CMAKE_DIR}" NO_DEFAULT_PATH)
  if(nanobind_FOUND)
    message(STATUS "Found nanobind version: ${nanobind_VERSION}")
  endif()
  execute_process(
    COMMAND "${Python_EXECUTABLE}" -m nanobind --include_dir
    OUTPUT_VARIABLE NANOBIND_INCLUDE_DIR
    OUTPUT_STRIP_TRAILING_WHITESPACE
  )
  message(STATUS "Found nanobind includes: ${NANOBIND_INCLUDE_DIR}")
  include_directories(${Python_INCLUDE_DIRS} ${NANOBIND_INCLUDE_DIR})
  nanobind_build_library(nanobind-static)
endif()

find_package(ONNX REQUIRED 1.17)
if(ONNX_FOUND)
  message(STATUS "Found ONNX version: ${ONNX_VERSION}")
  math(EXPR ONNX2MLIR_ONNX_VERSION "${ONNX_VERSION_MAJOR}*100 + ${ONNX_VERSION_MINOR}")
  message(STATUS "Set ONNX2MLIR_ONNX_VERSION=${ONNX2MLIR_ONNX_VERSION}")
  if (${ONNX2MLIR_ONNX_VERSION} LESS 119)
    message(FATAL_ERROR "ONNX version 1.19 or greater is required.")
  endif()
  add_definitions(-DONNX2MLIR_ONNX_VERSION=${ONNX2MLIR_ONNX_VERSION})
endif()
# onnx variant
find_path(ONNX_PROTOBUF_INCLUDE_DIR NAMES onnx/onnx.pb.h)
find_path(ONNX_PROTOBUF_ML_INCLUDE_DIR NAMES onnx/onnx-ml.pb.h)
if(ONNX_PROTOBUF_INCLUDE_DIR)
  message(STATUS "Standard ONNX_ML=0 protobuf headers found.")
  set(ONNX_USE_ML 0)
elseif(ONNX_PROTOBUF_ML_INCLUDE_DIR)
  message(STATUS "Extended ONNX_ML=1 protobuf headers found.")
  set(ONNX_USE_ML 1)
else()
  message(FATAL_ERROR "ONNX protobuf header not found.")
endif()

if (DEFINED LLVM_CONFIG)
  message(STATUS "Using ${LLVM_CONFIG}")
  separate_arguments(LLVM_CONFIG)
  execute_process(COMMAND ${LLVM_CONFIG} --libdir
    RESULT_VARIABLE __llvm_exit_code
    OUTPUT_VARIABLE __llvm_cmakedir_space
    OUTPUT_STRIP_TRAILING_WHITESPACE)
  if(NOT "${__llvm_exit_code}" STREQUAL "0")
    message(FATAL_ERROR "Fatal error executing: ${LLVM_CONFIG} --cmakedir")
  else()
    list(APPEND CMAKE_PREFIX_PATH "${__llvm_cmakedir_space}/cmake")
  endif()
else()
  message(FATAL_ERROR "Please use -DLLVM_CONFIG=<path-to-llvm-config> for a valid llvm setup.")
endif()

find_package(MLIR REQUIRED CONFIG)
if(MLIR_FOUND)
  message(STATUS "Found LLVM/MLIR version: ${LLVM_VERSION}")
  set(ONNX2MLIR_MLIR_VERSION ${LLVM_VERSION_MAJOR}${LLVM_VERSION_MINOR})
  message(STATUS "Set ONNX2MLIR_MLIR_VERSION=${ONNX2MLIR_MLIR_VERSION}")
  if (${ONNX2MLIR_MLIR_VERSION} LESS 210)
    message(FATAL_ERROR "LLVM/MLIR version 21.0 or greater is required.")
  endif()
  add_definitions(-DONNX2MLIR_MLIR_VERSION=${ONNX2MLIR_MLIR_VERSION})
  set(MLIR_BINARY_DIR ${CMAKE_BINARY_DIR})
  execute_process(
    COMMAND "${Python_EXECUTABLE}" -c "import mlir; print(mlir.__path__[0])"
    OUTPUT_VARIABLE MLIR_PYTHON_PATH
    OUTPUT_STRIP_TRAILING_WHITESPACE
  )
  if(MLIR_PYTHON_PATH)
    message(STATUS "Found MLIR python module: ${MLIR_PYTHON_PATH}")
    message(STATUS "MLIR Library Directory: ${LLVM_LIBRARY_DIR}")
    link_directories("${MLIR_PYTHON_PATH}/_mlir_libs")
  else()
    message(FATAL_ERROR "Cannot find MLIR python package.")
  endif()
  # generate python sysinfo
  file(WRITE "${CMAKE_BINARY_DIR}/python/onnx2mlir/version.py"
       "# Generated by CMake - DO NOT EDIT\n"
       ONNX2MLIR_VERSION = \"${PROJECT_VERSION}\"\n
       LLVM_LIBRARY_PATH = \"${LLVM_LIBRARY_DIR}\"\n)
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(TableGen)
include(AddLLVM)
include(AddMLIR)
if(BUILD_PYTHON_BINDINGS)
  include(AddMLIRPython)
endif()

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${PROJECT_BINARY_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_definitions(${LLVM_DEFINITIONS})

add_subdirectory(src)

if(BUILD_TESTING)
  find_program(PYTEST_EXECUTABLE pytest REQUIRED)
  add_subdirectory(tests)
endif()

add_custom_target(docs
  DEPENDS
    OnnxAttrsDocGen
    OnnxAttrsInterfacesDocGen
    OnnxDialectDocGen
    OnnxOpsDocGen
    OnnxOpsInterfacesDocGen
    OnnxTypesDocGen
    OnnxTypesInterfacesDocGen
    ConversionPassesDocGen
  COMMENT "Build docs"
)

add_custom_target(lint
  COMMAND env sh tests/lint/git-check-lint-format.sh
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  COMMENT "Running code format check..."
)

add_custom_target(tidy
  COMMAND env run-clang-tidy -quiet
    -p ${CMAKE_BINARY_DIR}
    -header-filter='^include/.*'
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  COMMENT "Running clang-tidy check..."
)
